# StudentLab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1f43a6a410c2_first_init.py  4032f8700da0_first_init.py  b7fec8b32727_first_init.py
app/: config.py  database.py  main.py  schemas.py
app/api/: forms.py  questions.py
app/models/: __init__.py  form.py  questions.py
